tests/baselines/reference/moduleAugmentationGlobal7_1.errors.txt
tests/cases/compiler/moduleAugmentationGlobal7_1.ts(2,5): error TS2667: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
tests/cases/compiler/moduleAugmentationGlobal7_1.ts(2,5): error TS2668: Augmentations for the global scope should have 'declare' modifier unless they appear in already ambient context.


==== tests/cases/compiler/moduleAugmentationGlobal7_1.ts (2 errors) ====
    namespace A {
        global {
        ~~~~~~
!!! error TS2667: Augmentations for the global scope can only be directly nested in external modules or ambient module declarations.
        ~~~~~~
!!! error TS2668: Augmentations for the global scope should have 'declare' modifier unless they appear in already ambient context.
            interface Array<T> { x }
        }
    }